# free-file-sync-mirror

./: .clangd  .editorconfig  .gitignore  .prettierrc.mjs  .prototools  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  TODO.md  cspell.config.yaml  package.json  taskfile.yaml  vcpkg.json
.github/config/: cspell-free-file-sync.dict
.github/docs/: build-free-file-sync.md  resources.md
.github/workflows/: makefile.yml
FreeFileSync/Languages/: arabic.lng  bulgarian.lng  chinese_simplified.lng  chinese_traditional.lng  croatian.lng  czech.lng  danish.lng  dutch.lng  english_uk.lng  finnish.lng  french.lng  german.lng  greek.lng  hebrew.lng  hindi.lng  hungarian.lng  italian.lng  japanese.lng  korean.lng  lithuanian.lng  norwegian.lng  polish.lng  portuguese.lng  portuguese_br.lng  romanian.lng  russian.lng  slovak.lng  slovenian.lng  spanish.lng  swedish.lng  turkish.lng  ukrainian.lng  vietnamese.lng
FreeFileSync/Source/: Makefile  application.cpp
FreeFileSync/Source/ui/: main_dlg.cpp
