cmake_minimum_required(VERSION 3.30)
project(free_file_sync_mirror)
set(CMAKE_CXX_STANDARD 14)

include(${CMAKE_CURRENT_SOURCE_DIR}/vcpkg/scripts/buildsystems/vcpkg.cmake)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(FreeFileSync/Source)
include_directories(FreeFileSync/Source/afs)
include_directories(FreeFileSync/Source/base)
include_directories(FreeFileSync/Source/RealTimeSync)
include_directories(FreeFileSync/Source/ui)
include_directories(FreeFileSync/Source/version)
include_directories(libcurl)
include_directories(libssh2)
include_directories(wx+)
include_directories(xBRZ/src)
include_directories(zen)
include_directories(zenXml)
include_directories(zenXml/zenxml)

set(FREE_FILE_SYNC_FILES
    FreeFileSync/Source/afs/abstract.cpp
    FreeFileSync/Source/afs/abstract.h
    FreeFileSync/Source/afs/abstract_impl.h
    FreeFileSync/Source/afs/concrete.cpp
    FreeFileSync/Source/afs/concrete.h
    FreeFileSync/Source/afs/ftp.cpp
    FreeFileSync/Source/afs/ftp.h
    FreeFileSync/Source/afs/ftp_common.h
    FreeFileSync/Source/afs/gdrive.cpp
    FreeFileSync/Source/afs/gdrive.h
    FreeFileSync/Source/afs/init_curl_libssh2.cpp
    FreeFileSync/Source/afs/init_curl_libssh2.h
    FreeFileSync/Source/afs/native.cpp
    FreeFileSync/Source/afs/native.h
    FreeFileSync/Source/afs/sftp.cpp
    FreeFileSync/Source/afs/sftp.h
    FreeFileSync/Source/base/algorithm.cpp
    FreeFileSync/Source/base/algorithm.h
    FreeFileSync/Source/base/binary.cpp
    FreeFileSync/Source/base/binary.h
    FreeFileSync/Source/base/cmp_filetime.h
    FreeFileSync/Source/base/comparison.cpp
    FreeFileSync/Source/base/comparison.h
    FreeFileSync/Source/base/db_file.cpp
    FreeFileSync/Source/base/db_file.h
    FreeFileSync/Source/base/dir_exist_async.h
    FreeFileSync/Source/base/dir_lock.cpp
    FreeFileSync/Source/base/dir_lock.h
    FreeFileSync/Source/base/file_hierarchy.cpp
    FreeFileSync/Source/base/file_hierarchy.h
    FreeFileSync/Source/base/icon_loader.cpp
    FreeFileSync/Source/base/icon_loader.h
    FreeFileSync/Source/base/lock_holder.h
    FreeFileSync/Source/base/multi_rename.cpp
    FreeFileSync/Source/base/multi_rename.h
    FreeFileSync/Source/base/norm_filter.h
    FreeFileSync/Source/base/parallel_scan.cpp
    FreeFileSync/Source/base/parallel_scan.h
    FreeFileSync/Source/base/path_filter.cpp
    FreeFileSync/Source/base/path_filter.h
    FreeFileSync/Source/base/process_callback.h
    FreeFileSync/Source/base/soft_filter.h
    FreeFileSync/Source/base/speed_test.cpp
    FreeFileSync/Source/base/speed_test.h
    FreeFileSync/Source/base/status_handler_impl.h
    FreeFileSync/Source/base/structures.cpp
    FreeFileSync/Source/base/structures.h
    FreeFileSync/Source/base/synchronization.cpp
    FreeFileSync/Source/base/synchronization.h
    FreeFileSync/Source/base/versioning.cpp
    FreeFileSync/Source/base/versioning.h
    FreeFileSync/Source/RealTimeSync/app_icon.h
    FreeFileSync/Source/RealTimeSync/application.cpp
    FreeFileSync/Source/RealTimeSync/application.h
    FreeFileSync/Source/RealTimeSync/config.cpp
    FreeFileSync/Source/RealTimeSync/config.h
    FreeFileSync/Source/RealTimeSync/folder_selector2.cpp
    FreeFileSync/Source/RealTimeSync/folder_selector2.h
    FreeFileSync/Source/RealTimeSync/gui_generated.cpp
    FreeFileSync/Source/RealTimeSync/gui_generated.h
    FreeFileSync/Source/RealTimeSync/main_dlg.cpp
    FreeFileSync/Source/RealTimeSync/main_dlg.h
    FreeFileSync/Source/RealTimeSync/monitor.cpp
    FreeFileSync/Source/RealTimeSync/monitor.h
    FreeFileSync/Source/RealTimeSync/tray_menu.cpp
    FreeFileSync/Source/RealTimeSync/tray_menu.h
    FreeFileSync/Source/ui/abstract_folder_picker.cpp
    FreeFileSync/Source/ui/abstract_folder_picker.h
    FreeFileSync/Source/ui/app_icon.h
    FreeFileSync/Source/ui/batch_config.cpp
    FreeFileSync/Source/ui/batch_config.h
    FreeFileSync/Source/ui/batch_status_handler.cpp
    FreeFileSync/Source/ui/batch_status_handler.h
    FreeFileSync/Source/ui/cfg_grid.cpp
    FreeFileSync/Source/ui/cfg_grid.h
    FreeFileSync/Source/ui/command_box.cpp
    FreeFileSync/Source/ui/command_box.h
    FreeFileSync/Source/ui/file_grid.cpp
    FreeFileSync/Source/ui/file_grid.h
    FreeFileSync/Source/ui/file_grid_attr.h
    FreeFileSync/Source/ui/file_view.cpp
    FreeFileSync/Source/ui/file_view.h
    FreeFileSync/Source/ui/folder_history_box.cpp
    FreeFileSync/Source/ui/folder_history_box.h
    FreeFileSync/Source/ui/folder_pair.h
    FreeFileSync/Source/ui/folder_selector.cpp
    FreeFileSync/Source/ui/folder_selector.h
    FreeFileSync/Source/ui/gui_generated.cpp
    FreeFileSync/Source/ui/gui_generated.h
    FreeFileSync/Source/ui/gui_status_handler.cpp
    FreeFileSync/Source/ui/gui_status_handler.h
    FreeFileSync/Source/ui/log_panel.cpp
    FreeFileSync/Source/ui/log_panel.h
    FreeFileSync/Source/ui/main_dlg.cpp
    FreeFileSync/Source/ui/main_dlg.h
    FreeFileSync/Source/ui/progress_indicator.cpp
    FreeFileSync/Source/ui/progress_indicator.h
    FreeFileSync/Source/ui/rename_dlg.cpp
    FreeFileSync/Source/ui/rename_dlg.h
    FreeFileSync/Source/ui/search_grid.cpp
    FreeFileSync/Source/ui/search_grid.h
    FreeFileSync/Source/ui/small_dlgs.cpp
    FreeFileSync/Source/ui/small_dlgs.h
    FreeFileSync/Source/ui/sync_cfg.cpp
    FreeFileSync/Source/ui/sync_cfg.h
    FreeFileSync/Source/ui/tray_icon.cpp
    FreeFileSync/Source/ui/tray_icon.h
    FreeFileSync/Source/ui/tree_grid.cpp
    FreeFileSync/Source/ui/tree_grid.h
    FreeFileSync/Source/ui/tree_grid_attr.h
    FreeFileSync/Source/ui/triple_splitter.cpp
    FreeFileSync/Source/ui/triple_splitter.h
    FreeFileSync/Source/ui/version_check.cpp
    FreeFileSync/Source/ui/version_check.h
    FreeFileSync/Source/version/version.h
    FreeFileSync/Source/application.cpp
    FreeFileSync/Source/application.h
    FreeFileSync/Source/base_tools.cpp
    FreeFileSync/Source/base_tools.h
    FreeFileSync/Source/config.cpp
    FreeFileSync/Source/config.h
    FreeFileSync/Source/ffs_paths.cpp
    FreeFileSync/Source/ffs_paths.h
    FreeFileSync/Source/icon_buffer.cpp
    FreeFileSync/Source/icon_buffer.h
    FreeFileSync/Source/localization.cpp
    FreeFileSync/Source/localization.h
    FreeFileSync/Source/log_file.cpp
    FreeFileSync/Source/log_file.h
    FreeFileSync/Source/parse_lng.h
    FreeFileSync/Source/parse_plural.h
    FreeFileSync/Source/return_codes.h
    FreeFileSync/Source/status_handler.cpp
    FreeFileSync/Source/status_handler.h
    libcurl/curl_wrap.cpp
    libcurl/curl_wrap.h
    libssh2/libssh2_wrap.h
    wx+/app_main.h
    wx+/async_task.h
    wx+/bitmap_button.h
    wx+/choice_enum.h
    wx+/context_menu.h
    wx+/dc.h
    wx+/file_drop.cpp
    wx+/file_drop.h
    wx+/graph.cpp
    wx+/graph.h
    wx+/grid.cpp
    wx+/grid.h
    wx+/image_holder.h
    wx+/image_resources.cpp
    wx+/image_resources.h
    wx+/image_tools.cpp
    wx+/image_tools.h
    wx+/no_flicker.h
    wx+/popup_dlg.cpp
    wx+/popup_dlg.h
    wx+/popup_dlg_generated.cpp
    wx+/popup_dlg_generated.h
    wx+/rtl.h
    wx+/std_button_layout.h
    wx+/taskbar.cpp
    wx+/taskbar.h
    wx+/toggle_button.h
    wx+/tooltip.cpp
    wx+/tooltip.h
    wx+/window_layout.h
    wx+/window_tools.h
    xBRZ/src/xbrz.cpp
    xBRZ/src/xbrz.h
    xBRZ/src/xbrz_config.h
    xBRZ/src/xbrz_tools.h
    zen/argon2.cpp
    zen/argon2.h
    zen/base64.h
    zen/basic_math.h
    zen/build_info.h
    zen/crc.h
    zen/dir_watcher.cpp
    zen/dir_watcher.h
    zen/error_log.h
    zen/extra_log.h
    zen/file_access.cpp
    zen/file_access.h
    zen/file_error.h
    zen/file_io.cpp
    zen/file_io.h
    zen/file_path.cpp
    zen/file_path.h
    zen/file_traverser.cpp
    zen/file_traverser.h
    zen/format_unit.cpp
    zen/format_unit.h
    zen/globals.h
    zen/guid.h
    zen/http.cpp
    zen/http.h
    zen/i18n.h
    zen/json.h
    zen/legacy_compiler.cpp
    zen/legacy_compiler.h
    zen/open_ssl.cpp
    zen/open_ssl.h
    zen/perf.h
    zen/process_exec.cpp
    zen/process_exec.h
    zen/process_priority.cpp
    zen/process_priority.h
    zen/recycler.cpp
    zen/recycler.h
    zen/resolve_path.cpp
    zen/resolve_path.h
    zen/ring_buffer.h
    zen/scope_guard.h
    zen/serialize.h
    zen/shutdown.cpp
    zen/shutdown.h
    zen/socket.h
    zen/stl_tools.h
    zen/stream_buffer.h
    zen/string_base.h
    zen/string_tools.h
    zen/string_traits.h
    zen/symlink_target.h
    zen/sys_error.cpp
    zen/sys_error.h
    zen/sys_info.cpp
    zen/sys_info.h
    zen/sys_version.cpp
    zen/sys_version.h
    zen/thread.cpp
    zen/thread.h
    zen/time.h
    zen/type_traits.h
    zen/utf.h
    zen/warn_static.h
    zen/zlib_wrap.cpp
    zen/zlib_wrap.h
    zen/zstring.cpp
    zen/zstring.h
    zenXml/zenxml/cvrt_struc.h
    zenXml/zenxml/cvrt_text.h
    zenXml/zenxml/dom.h
    zenXml/zenxml/parser.h
    zenXml/zenxml/xml.h)

find_package(OpenSSL REQUIRED)
find_package(wxWidgets REQUIRED COMPONENTS core base)

include_directories(${OPENSSL_INCLUDE_DIR})
include_directories(${wxWidgets_INCLUDE_DIRS})

target_link_libraries(free_file_sync_mirror ${OPENSSL_LIBRARIES})
target_link_libraries(free_file_sync_mirror ${wxWidgets_LIBRARIES})

add_executable(free_file_sync_mirror
    ${FREE_FILE_SYNC_FILES})
